universal setting basic page generated 	modified:   App_Resources/Android/app.gradle 	modified:   README.md 	modified:   angular.json 	modified:   package-lock.json 	modified:   package.json 	new file:   server.ts 	new file:   src/app/admin/admin-routing.module.tns.ts 	new file:   src/app/admin/admin-routing.module.ts 	new file:   src/app/admin/admin.common.ts 	new file:   src/app/admin/admin.component.html 	new file:   src/app/admin/admin.component.scss 	new file:   src/app/admin/admin.component.spec.ts 	new file:   src/app/admin/admin.component.tns.html 	new file:   src/app/admin/admin.component.tns.scss 	new file:   src/app/admin/admin.component.ts 	new file:   src/app/admin/admin.module.tns.ts 	new file:   src/app/admin/admin.module.ts 	new file:   src/app/admin/layout/footer/footer.component.html 	new file:   src/app/admin/layout/footer/footer.component.scss 	new file:   src/app/admin/layout/footer/footer.component.spec.ts 	new file:   src/app/admin/layout/footer/footer.component.tns.html 	new file:   src/app/admin/layout/footer/footer.component.tns.scss 	new file:   src/app/admin/layout/footer/footer.component.ts 	new file:   src/app/admin/layout/header/header.component.html 	new file:   src/app/admin/layout/header/header.component.scss 	new file:   src/app/admin/layout/header/header.component.spec.ts 	new file:   src/app/admin/layout/header/header.component.tns.html 	new file:   src/app/admin/layout/header/header.component.tns.scss 	new file:   src/app/admin/layout/header/header.component.ts 	new file:   src/app/admin/main/main.component.html 	new file:   src/app/admin/main/main.component.scss 	new file:   src/app/admin/main/main.component.spec.ts 	new file:   src/app/admin/main/main.component.tns.html 	new file:   src/app/admin/main/main.component.tns.scss 	new file:   src/app/admin/main/main.component.ts 	modified:   src/app/app-routing.module.ts 	modified:   src/app/app.module.ts 	new file:   src/app/app.server.module.ts 	new file:   src/app/home/home-rout

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,8 @@
   "version": 1,
   "newProjectRoot": "projects",
   "cli": {
-    "defaultCollection": "@nativescript/schematics"
+    "defaultCollection": "@nativescript/schematics",
+    "analytics": false
   },
   "projects": {
     "movila": {
@@ -20,7 +21,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/movila",
+            "outputPath": "dist/movila/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -93,11 +94,59 @@
           "options": {
             "tsConfig": [
               "tsconfig.app.json",
-              "tsconfig.spec.json"
+              "tsconfig.spec.json",
+              "tsconfig.server.json"
             ],
             "exclude": [
               "**/node_modules/**"
             ]
+          }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/movila/server",
+            "main": "server.ts",
+            "tsConfig": "tsconfig.server.json"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "sourceMap": false,
+              "optimization": true
+            }
+          }
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "options": {
+            "browserTarget": "movila:build",
+            "serverTarget": "movila:server"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "movila:build:production",
+              "serverTarget": "movila:server:production"
+            }
+          }
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "browserTarget": "movila:build:production",
+            "serverTarget": "movila:server:production",
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {}
           }
         }
       }
