--- a/package.json
+++ b/package.json
@@ -12,32 +12,46 @@
     "android": "tns run android --no-hmr",
     "ios": "tns run ios --no-hmr",
     "mobile": "tns run",
-    "preview": "tns preview"
+    "preview": "tns preview",
+    "dev:ssr": "ng run movila:serve-ssr",
+    "serve:ssr": "node dist/movila/server/main.js",
+    "build:ssr": "ng build --prod && ng run movila:server:production",
+    "prerender": "ng run movila:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
-    "@nativescript/angular": "~11.0.0",
-    "core-js": "^3.8.0",
-    "@nativescript/core": "~7.0.0",
+    "@angular/animations": "~11.2.7",
+    "@angular/common": "~11.2.7",
+    "@angular/compiler": "~11.2.7",
+    "@angular/core": "~11.2.7",
+    "@angular/forms": "~11.2.7",
+    "@angular/platform-browser": "~11.2.7",
+    "@angular/platform-browser-dynamic": "~11.2.7",
+    "@angular/platform-server": "^11.2.14",
+    "@angular/router": "~11.2.7",
+    "@nativescript/angular": "~11.8.0",
+    "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~3.0.0",
+    "@nguniversal/express-engine": "^11.2.1",
+    "core-js": "^3.8.0",
+    "express": "^4.15.2",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
     "tslib": "~2.0.0",
+    "tslint-angular": "^3.0.3",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular/cli": "~11.0.0",
-    "@angular/compiler-cli": "~11.0.0",
-    "@angular-devkit/build-angular": "~0.1100.0",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.2.14",
+    "@angular/compiler-cli": "~11.2.7",
+    "@nativescript/android": "8.0.0",
+    "@nativescript/schematics": "^11.2.0",
     "@nativescript/tslint-rules": "~0.0.5",
+    "@nativescript/webpack": "^4.1.0",
+    "@ngtools/webpack": "~11.2.6",
+    "@nguniversal/builders": "^11.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -49,11 +63,10 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "@nativescript/webpack": "~3.0.0",
+    "node-sass": "^4.7.1",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.0",
-    "node-sass": "^4.7.1"
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.6"
   }
 }
