--- a/tsconfig.tns.json
+++ b/tsconfig.tns.json
@@ -1,19 +1,19 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "skipLibCheck": true,
-    "baseUrl": ".",
+    "outDir": "./out-tsc/app",
+    "module": "esnext",
+    "types": [],
     "paths": {
       "@src/*": [
-        "src/*.tns.ts",
-        "src/*.ts"
+        "src/*.android.ts",
+        "src/*.ios.ts",
+        "src/*.tns.ts"
       ]
     }
   },
   "files": [
-    "src/main.tns.ts"
+    "src/main.tns.ts",
+    "src/polyfills.ts"
   ]
 }
