--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~3.0.0",
     "@nguniversal/express-engine": "^11.2.1",
+    "angular-split": "^5.0.0",
     "core-js": "^3.8.0",
     "express": "^4.15.2",
     "reflect-metadata": "~0.1.12",
