--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.7",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.7",
@@ -35,13 +36,19 @@
     "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~3.0.0",
     "@nguniversal/express-engine": "^11.2.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "angular-split": "^5.0.0",
     "core-js": "^3.8.0",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
+    "firebase": "^7.0 || ^8.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
+    "ts-loader": "^9.2.3",
     "tslib": "~2.0.0",
     "tslint-angular": "^3.0.3",
+    "webpack-cli": "^4.7.2",
+    "ws": "^7.5.3",
+    "xhr2": "^0.2.1",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
@@ -70,6 +77,13 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.1.6"
+    "typescript": "^4.1.6",
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0"
   }
 }
