--- a/package.json
+++ b/package.json
@@ -35,23 +35,18 @@
     "@nativescript/angular": "~11.8.0",
     "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~3.0.0",
-    "@nguniversal/express-engine": "^11.2.1",
-    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "angular-split": "^5.0.0",
     "core-js": "^3.8.0",
     "express": "^4.17.1",
     "firebase": "^7.0 || ^8.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
-    "ts-loader": "^9.2.3",
     "tslib": "~2.0.0",
     "tslint-angular": "^3.0.3",
-    "webpack-cli": "^4.7.2",
-    "ws": "^7.5.3",
-    "xhr2": "^0.2.1",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
     "@angular-devkit/build-angular": "^0.1100.7",
     "@angular/cli": "^11.2.14",
     "@angular/compiler-cli": "~11.2.7",
@@ -61,29 +56,36 @@
     "@nativescript/webpack": "^4.1.0",
     "@ngtools/webpack": "~11.2.6",
     "@nguniversal/builders": "^11.2.1",
+    "@nguniversal/express-engine": "^11.2.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "bufferutil": "^4.0.3",
     "codelyzer": "^5.1.2",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "jsonc-parser": "^3.0.0",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "node-sass": "^4.7.1",
+    "open": "^7.0.3",
     "protractor": "~5.4.3",
+    "ts-loader": "^9.2.3",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
     "typescript": "^4.1.6",
-    "@angular-devkit/architect": ">= 0.900 < 0.1300",
-    "firebase-tools": "^8.0.0 || ^9.0.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3",
-    "jsonc-parser": "^3.0.0"
+    "utf-8-validate": "^5.0.5",
+    "webpack-cli": "^4.7.2",
+    "ws": "^7.5.3",
+    "xhr2": "^0.2.1"
   }
 }
