숙소 모듈 생성하고 작업 모달 서비스 생성 	modified:   src/app/admin/admin.module.ts 	modified:   src/app/admin/info/mypage/mypage.component.html 	modified:   src/app/admin/info/mypage/mypage.component.scss 	modified:   src/app/admin/info/mypage/mypage.component.ts 	modified:   src/app/admin/layout/header/header.component.html 	modified:   src/app/admin/layout/header/header.component.ts 	new file:   src/app/admin/unit/add/add.component.html 	new file:   src/app/admin/unit/add/add.component.scss 	new file:   src/app/admin/unit/add/add.component.spec.ts 	new file:   src/app/admin/unit/add/add.component.tns.html 	new file:   src/app/admin/unit/add/add.component.tns.scss 	new file:   src/app/admin/unit/add/add.component.ts 	modified:   src/app/admin/unit/unit.component.html 	modified:   src/app/admin/unit/unit.component.ts 	modified:   src/app/app.module.tns.ts 	modified:   src/app/app.module.ts 	modified:   src/app/global/global.d.ts 	modified:   src/app/global/global.ts 	modified:   src/app/home/login/login.component.html 	modified:   src/app/service/auth.guard.ts 	new file:   src/app/service/dialog.service.spec.ts 	new file:   src/app/service/dialog.service.ts 	modified:   src/app/service/session.service.ts 	modified:   src/styles.scss 	modified:   tsconfig.app.json 	modified:   tsconfig.json 	modified:   tsconfig.server.json

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,9 +13,14 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "src/app/global/global.d.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
   ],
   "exclude": [
-    "src/*.tns.ts"
+    "src/*.tns.ts",
+    "**/*.spec.ts"
   ]
 }
