--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -10,8 +10,7 @@
   },
   "files": [
     "src/main.server.ts",
-    "server.ts",
-    "src/app/global/global.d.ts"
+    "server.ts"
   ],
   "angularCompilerOptions": {
     "entryModule": "./src/app/app.server.module#AppServerModule"
