--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,8 +13,7 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts",
-    "src/app/global/global.d.ts"
+    "src/polyfills.ts"
   ],
   "include": [
     "src/**/*.d.ts"
