--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nativescript/angular": "~11.8.0",
     "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~3.0.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "angular-split": "^5.0.0",
     "core-js": "^3.8.0",
     "express": "^4.17.1",
