--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@angular/platform-server": "^11.2.14",
     "@angular/router": "~11.2.7",
     "@nativescript/angular": "~11.8.0",
-    "@nativescript/core": "~8.0.0",
+    "@nativescript/core": "^8.0.11",
     "@nativescript/theme": "~3.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -43,6 +43,7 @@
     "firebase": "^7.0 || ^8.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
+    "swiper": "^6.8.4",
     "tslib": "~2.0.0",
     "tslint-angular": "^3.0.3",
     "zone.js": "~0.11.1"
@@ -50,7 +51,6 @@
   "devDependencies": {
     "@angular-devkit/architect": ">= 0.900 < 0.1300",
     "@angular-devkit/build-angular": "^0.1100.7",
-    "@angular/cli": "^11.2.14",
     "@angular/compiler-cli": "~11.2.7",
     "@nativescript/android": "8.0.0",
     "@nativescript/schematics": "^11.2.0",
@@ -66,6 +66,7 @@
     "@types/node": "^12.11.1",
     "bufferutil": "^4.0.3",
     "codelyzer": "^5.1.2",
+    "copy-webpack-plugin": "^5.1.2",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
@@ -86,7 +87,7 @@
     "tslint": "^6.1.3",
     "typescript": "^4.1.6",
     "utf-8-validate": "^5.0.5",
-    "webpack-cli": "^4.7.2",
+    "webpack-cli": "^3.3.12",
     "ws": "^7.5.3",
     "xhr2": "^0.2.1"
   }
