--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/assets/css/font.css",
+              "src/assets/css/layout.css",
               "src/styles.scss"
             ],
             "scripts": []
