안드로이드 설정 적용 	modified:   App_Resources/Android/AndroidManifest.xml 	modified:   package-lock.json 	modified:   package.json 	modified:   src/_app-common.scss 	modified:   src/app/app.module.tns.ts 	new file:   src/app/assets/images/no_image.jpg 	new file:   src/app/global/static-variable.tns.ts 	modified:   src/app/global/static-variable.ts 	modified:   src/app/home/accom-list/accom-list.component.tns.html 	new file:   src/app/home/accom-list/accom-list.component.tns.ts 	modified:   src/app/home/home-routing.module.tns.ts 	modified:   src/app/home/home.module.tns.ts 	modified:   src/app/home/layout/footer/footer.component.tns.html 	modified:   src/app/home/main/main.component.tns.ts 	modified:   src/app/home/unit-list/unit-list.component.tns.html 	modified:   src/app/home/unit-list/unit-list.component.tns.ts 	new file:   src/app/service/post-api.service.tns.ts 	modified:   src/app/shared/shared.module.tns.ts 	modified:   tsconfig.tns.json

--- a/tsconfig.tns.json
+++ b/tsconfig.tns.json
@@ -1,14 +1,17 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
     "module": "esnext",
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
     "types": [],
     "paths": {
       "@src/*": [
         "src/*.android.ts",
         "src/*.ios.ts",
-        "src/*.tns.ts"
+        "src/*.tns.ts",
+        "src/*.ts",
       ]
     }
   },
