--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@angular/platform-server": "^11.2.14",
     "@angular/router": "~11.2.7",
     "@nativescript/angular": "~11.8.0",
-    "@nativescript/core": "^8.0.11",
+    "@nativescript/core": "^8.0.0",
     "@nativescript/theme": "~3.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -85,7 +85,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.1.6",
+    "typescript": "4.1.6",
     "utf-8-validate": "^5.0.5",
     "webpack-cli": "^3.3.12",
     "ws": "^7.5.3",
