--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@angular-devkit/build-angular": "^0.1100.7",
     "@angular/compiler-cli": "~11.2.7",
     "@nativescript/android": "8.0.0",
+    "@nativescript/ios": "8.0.0",
     "@nativescript/schematics": "^11.2.0",
     "@nativescript/tslint-rules": "~0.0.5",
     "@nativescript/webpack": "^4.1.0",
