custom ngx-date-rage 적용 	modified:   package-lock.json 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "core-js": "^3.8.0",
     "express": "^4.17.1",
     "firebase": "^7.0 || ^8.0",
-    "nativescript-ngx-date-range": "^1.0.7",
+    "nativescript-ngx-date-range": "git+https://github.com/rodgh522/nativescript-ngx-date-range.git",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
     "swiper": "^6.8.4",
