--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/assets/css/font.css",
               "src/assets/css/layout.css",
+              "src/assets/css/layout2.css",
+              "src/assets/css/common.css",
               "src/assets/layout.scss",
               "src/assets/_var.scss",
               "src/styles.scss"
