swiper 모듈 추가 및 적용

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "core-js": "^3.8.0",
     "express": "^4.17.1",
     "firebase": "^7.0 || ^8.0",
+    "nativescript-carousel": "^7.0.1",
     "nativescript-ngx-date-range": "git+https://github.com/rodgh522/nativescript-ngx-date-range.git",
+    "nativescript-ui-gauge": "^8.0.0",
     "nativescript-windowed-modal": "^7.0.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
