--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nativescript/theme": "~3.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@nstudio/nativescript-checkbox": "^2.0.4",
     "angular-split": "^5.0.0",
     "core-js": "^3.8.0",
     "express": "^4.17.1",
