--- a/App_Resources/Android/AndroidManifest.xml
+++ b/App_Resources/Android/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
 	<application
 		android:name="com.tns.NativeScriptApplication"
+		android:name="android.support.multidex.MultiDexApplication"
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
