--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -9,7 +9,7 @@ android {
   defaultConfig {  
     generatedDensities = []
     applicationId = "org.nativescript.movila" 
-    
+    multiDexEnabled true
     //override supported platforms
     // ndk {
     //       abiFilters.clear()
