--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -20,4 +20,7 @@ android {
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
   }  
+  dexOptions{
+    javaMaxHeapSize "4g"
+  }
 } 
