temp 파일 업로드 디렉티브 생성 	modified:   App_Resources/iOS/Info.plist 	modified:   package-lock.json 	modified:   package.json 	new file:   src/app/directive/mobile-file-attach.directive.spec.ts 	new file:   src/app/directive/mobile-file-attach.directive.tns.ts 	modified:   src/app/home/home.module.tns.ts 	modified:   src/app/home/home.module.ts

--- a/App_Resources/iOS/Info.plist
+++ b/App_Resources/iOS/Info.plist
@@ -43,5 +43,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Take pictures for the gallery</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Add images from your device</string>
 </dict>
 </plist>
