--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-server": "^11.2.14",
     "@angular/router": "~11.2.7",
     "@nativescript/angular": "~11.8.0",
+    "@nativescript/background-http": "^5.0.2",
     "@nativescript/core": "^8.0.0",
     "@nativescript/firebase": "^11.1.3",
     "@nativescript/imagepicker": "^1.0.5",
